do asked quick fixings: fix large whitespace above your bottom-div class and image-div, add nav items left bar,add the hover effect to nav,fix the search icon position, add the watch your verse link on the image banner with the hover underline effect

--- a/style.css
+++ b/style.css
@@ -1,36 +1,75 @@
 body{
     background: url(images/expedition_hero.jpg) top center no-repeat;
-    background-size: 100% 600px; 
+    background-size: 100% 520px; 
     font-family: 'Barlow', sans-serif;
-    
+   
 }
+
+footer{font-family: sans-serif;}
+
 ul{
     list-style: none;
 }
-ul li {display:inline;}
+
+
 .nav-bar{
     display:flex;
     flex-direction: row;
-   justify-content: space-around;
-   align-items: center;
+    box-sizing: border-box;
     width:80%;
-    height:3em;
+    height:2.5em;
     /*background-image: linear-gradient(rgb(58, 56, 56) 50%, rgb(180, 173, 173) 50%);*/
     margin: 5% auto;
-    border-radius: 0.8em;
+    border-radius: 0.4em;
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #787878), color-stop(0.5, #5E5E5E), color-stop(0.51, #707070), color-stop(1, #838383));
     text-shadow: 0 -1px 3px #202020;
     box-shadow: 0 3px 4px #8b8b8b;
+    padding-left:0;
+    
+}
+.navbar-li{
+    width:100%;
+    box-sizing: border-box;
+    height: 100%;
+    
+    display: flex;
+    align-content: stretch;
+}
+.hover:hover{
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #494949), color-stop(0.5, rgb(85, 84, 84)), color-stop(0.51, #616060), color-stop(1, #636161));
+    
+}
+.hover1:hover{
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #494949), color-stop(0.5, rgb(85, 84, 84)), color-stop(0.51, #616060), color-stop(1, #636161));
+    border-radius: 0.4em 0 0 0.4em;
 }
 .navbar-element{
-    display:block;
-    text-decoration-line: none;
+    display: inline-block;
+    border-right :1px solid black;
+    width:100%;
+    height: 100%;
+    text-align: center;
+    padding-top: 0.5em;
     color:white;
+    box-sizing: border-box;
+    text-decoration-line: none;
+}
+.icon-element{
+    border-right :1px solid black;
+    display: inline-block;
+    width:100%;
+    height: 100%;
+    text-align: center;
+    color:white;
+    box-sizing: border-box;
+    text-decoration-line: none;
 }
 .fab.fa-apple{
+    
     font-size: 2em;
 }
 .search-bar{
+    margin: 0.3em;
     border: 0.1em solid rgb(73, 72, 72);
     border-radius: 1em;
     background: inherit;
@@ -39,8 +78,9 @@ ul li {display:inline;}
 }
 .fas.fa-search{
     font-size: 0.8em;
-    position:relative;
-    left:70px;
+    position:absolute;
+    right:23em;
+    top:6em;
 }
 
 
@@ -48,7 +88,7 @@ ul li {display:inline;}
 .image-div{
     width:100%;
     height: 30%;
-    margin-top: 12.4%;
+    margin-top: 3%;
 }
 .img1{
     display:block;
@@ -59,6 +99,9 @@ ul li {display:inline;}
     display:block;
     max-width:100%;
     margin:auto;
+    padding-bottom: 10px;
+    position:relative;
+    bottom:10px;
 }
 
 .link{
@@ -67,26 +110,29 @@ ul li {display:inline;}
     font-size:2em;
     text-decoration-line: none;
     color:white;
-    
     padding-bottom:10%;
-    
     text-align: center;
     width:100%;
+}
+.link:hover{
+    text-decoration-line: underline ;
 }
 
 
 .bottom-div{
+    box-sizing: border-box;
     width:100%;
     height: 40%;
    
-    display:flex;
+    
 }
 .img-bottom{
     width:25%;
 }
 footer{
+   
     box-sizing: border-box;
-    padding:0% 4%;
+    padding:0% 2%;
     font-size: 8pt;
     
 }
@@ -95,19 +141,24 @@ footer a {
 }
 
 .footer-p{
-    float:left;
+    width:40%;
+    display: inline-block;
+    
 
 }
 .footer-nav{
-    float:right;
-
+    margin-left: 10%;
+    display: inline-block;
+    width:45%;
 }
 
 .footer-nav a,.terms{
+    box-sizing: border-box;
     border-right:1px solid rgb(167, 165, 165);
     padding-right: 1%;
     margin-right:1%;
 }
 .copyright{
-    float:left;
+    display: inline-block;
+    width:50%;
 }
